2007-07-12  Bastien Nocera  <hadess@hadess.net>

	* src/main.c: (main): Creating the listener can't fail,
	init the icons before any UI bits

	* src/icon.c: (icon_init): Set a default window icon

	* src/phonemgr-chooser-button.c: (choose_bdaddr),
	(phonemgr_chooser_button_finalize): Don't change the device
	selected if there was already one, and we click cancel,
	parent the dialog properly to the preferences window, and
	kill the dialog when we exit

2007-07-12  Bastien Nocera  <hadess@hadess.net>

	* src/connection.c: (set_connection_device), (connect_phone),
	(reconnect_phone): Only reconnect to the phone if the device
	we're connecting to really changed

2007-07-12  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: upd

	* src/app.h:
	* src/main.c: (main): Remove the BtctlController, and move it
	into the chooser widget

	* src/phonemgr-chooser-button.*:
	* ui/phonemgr.glade: Add a new chooser widget, and use it

	* src/gconf-bridge.*:
	* src/ui.c: (set_dependent_widget), (populate_prefs),
	(apply_prefs), (prefs_dialog_response), (ui_init):
	Simplify the code, using GConfBridge to bind toggle buttons
	and GConf keys, use GConfBridge to bind the new Bluetooth
	chooser button as well, try to bring as close as possible to
	instant-apply (still flaky) on reconnects

	* src/connection.c: (set_connection_device): Simplify
	set_connection_device(), remove unneeded define

2007-07-11  Bastien Nocera  <hadess@hadess.net>

	* src/ui.c: (get_current_btname), (populate_prefs), (apply_prefs):
	Avoid GConf errors when the bdaddr is empty (non-NULL)

2007-07-11  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/app.h:
	* ui/Makefile.am:
	* ui/gnome-phone-manager.schemas.in: Add a schemas file,
	remove the /prefs subdir to gnome-phone-manager GConf entries,
	it's all prefs anyway (Closes: #455841)

2007-07-11  Bastien Nocera  <hadess@hadess.net>

	* src/icon.c: (tray_icon_popup_menu_cb):
	* src/ui.c: (apply_prefs), (prefs_dialog_response), (ui_init),